idoctor, iclinic - создание доктора и клиники из заявки

--- a/app/views/Advises/_form.html.erb
+++ b/app/views/Advises/_form.html.erb
@@ -8,6 +8,8 @@
   <%= f.input :phone_number %>
   <%= f.input :pediatric %>
   <%= f.input :description %>
+  <%= f.input :idoctor %>
+  <%= f.input :iclinic %>
   <div class="form-actions">
     <%= f.button :submit, 'Рекомендовать', :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
