--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -41,20 +41,40 @@
     <dl class="dl-horizontal pull-left">
       <dt><strong><%= model_class.human_attribute_name(:city) %>:</strong></dt>
       <dd><%= @doctor.addresses.first.city %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:address) %>:</strong></dt>
-      <dd><%= @doctor.addresses.first.address_1 %></dd>
+
       <dt><strong><%= model_class.human_attribute_name(:stage) %>:</strong></dt>
-      <dd><%= distance_of_time_in_words(Date.today, @doctor.starting_work) %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:awards) %>:</strong></dt>
-      <dd><%= @doctor.awards %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:visit_home) %>:</strong></dt>
-      <dd><%= @doctor.visit_home ? 'Да' : 'Нет' %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
-      <dd><%= @doctor.price %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:gender) %>:</strong></dt>
-      <dd><%= @doctor.gender %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-      <dd><%= @doctor.description %></dd>
+      <dd><%= distance_of_time_in_words(Date.today, @doctor.starting_work) rescue '-' %></dd>
+
+      <% if @doctor.education.present? %>
+        <dt><strong><%= model_class.human_attribute_name(:education) %>:</strong></dt>
+        <dd><%= @doctor.education %></dd>
+      <% end %>
+      <% if @doctor.high_school_name.present? %>
+        <dt><strong><%= model_class.human_attribute_name(:high_school_name) %>:</strong></dt>
+        <dd><%= @doctor.high_school_name %></dd>
+      <% end %>
+      <% if @doctor.awards.present? %>
+        <dt><strong><%= model_class.human_attribute_name(:awards) %>:</strong></dt>
+        <dd><%= @doctor.awards %></dd>
+      <% end %>
+      <% if @doctor.visit_home.present? %>
+        <dt><strong><%= model_class.human_attribute_name(:visit_home) %>:</strong></dt>
+        <dd><%= @doctor.visit_home ? 'Да' : 'Нет' %></dd>
+      <% end %>
+      <% if @doctor.price.present? %>
+        <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
+        <dd><%= @doctor.price %></dd>
+      <% end %>
+      <% if @doctor.gender.present? %>
+        <dt><strong><%= model_class.human_attribute_name(:gender) %>:</strong></dt>
+        <dd><%= @doctor.gender %></dd>
+      <% end %>
+      <% if @doctor.price.present? %>
+        <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+      <% end %>
+      <% if @doctor.description.present? %>
+        <dd><%= @doctor.description %></dd>
+      <% end %>
       <% @doctor.addresses.each do |address| %>
         <dt><strong>Адрес:</strong></dt>
         <dd><%= address.city_address %> <%= address.street_address %></dd>
