ssl, радио для gender

--- a/app/views/admin/advises/_result.html.slim
+++ b/app/views/admin/advises/_result.html.slim
@@ -11,7 +11,7 @@
     td= l advise.created_at, format: :short
     td
       = link_to t('.edit', :default => t("helpers.links.edit")), \
-        edit_admin_advise_path(advise), :class => 'btn btn-mini' \
+        edit_admin_advise_path(advise), :class => 'btn btn-mini'
 
       = link_to t('.destroy', :default => t("helpers.links.destroy")),                                               \
         admin_advise_path(advise),                                                                                   \
