--- a/app/views/admin/advises/_form.html.slim
+++ b/app/views/admin/advises/_form.html.slim
@@ -7,6 +7,7 @@
   = f.input :city
   = f.input :phone_number
   = f.input :pediatric
+  = f.input :gender, collection: Doctor::GENDER, as: :radio_buttons
   = f.input :description, as: :text
   .form-actions
     = f.button :submit, :class => 'btn-primary'
