--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,12 +1,22 @@
 footer
   .container
     .row-fluid
-      .span4
-        p © 2013 · Украина
-      .span4
-        ul
-        script charset="utf-8" src="//yandex.st/share/share.js" type="text/javascript" 
-        .yashare-auto-init data-yasharedescription=("Советуем доктора!") data-yasharel10n="ru" data-yasharequickservices="facebook,vkontakte,twitter,gplus,odnoklassniki" data-yasharetext="поделиться" data-yasharetype="link" 
-      .span4
-        p.pull-right
-          a href="#"  Вверх
+      .span3
+        ul.nav.nav-pills
+          li
+            a.nav.nav-pills href="#" © 2013 · Украина
+      .span6
+        ul.nav.nav-pills
+          li
+            script charset="utf-8" src="//yandex.st/share/share.js" type="text/javascript"
+            .yashare-auto-init data-yasharedescription=("Советуем доктора!") data-yasharel10n="ru" data-yasharequickservices="facebook,vkontakte,twitter,gplus,odnoklassniki" data-yasharetext="поделиться" data-yasharetype="link"
+          li
+            =link_to 'Контакты', contacts_path
+          li
+            =link_to 'О нас', about_path
+          li
+            =link_to 'Размещение рекламы', advertisement_path
+      .span3
+        ul.nav.nav-pills.pull-right
+          li
+            a.nav.nav-pills href="#"  Вверх
