--- a/app/views/mailer/new_advise.html.slim
+++ b/app/views/mailer/new_advise.html.slim
@@ -1,1 +1,5 @@
 | Поступила новая #{link_to 'заявка',  "http://consultor.com.ua/admin/advises/#{@advise.id}"}
+p
+| ФИО #{@advise.last_name}
+p
+| Название #{@advise.full_name}
